--- a/privacy.html
+++ b/privacy.html
@@ -11,8 +11,8 @@
       background-color: #0d0d0d;
       color: #b0b0b0;
       margin: 0;
-      line-height: 1.3;
-      font-size: 12px;
+      line-height: 1.8;
+      font-size: 18px;
     }
 
     /* --- Header & Navigation --- */
@@ -24,13 +24,29 @@
       border-bottom: 1px solid #333;
     }
 
+    .nav-left, .nav-right {
+      display: flex;
+      align-items: center;
+      width: 33.33%;
+    }
+
+    .nav-right {
+      justify-content: flex-end;
+    }
+    
+    .logo {
+      display: flex;
+      justify-content: center;
+      width: 33.33%;
+    }
+
     .logo img {
-      height: 55px;
+      height: 85px;
       width: auto;
     }
 
     nav a {
-      margin-left: 35px;
+      margin: 0 20px;
       text-decoration: none;
       color: #e0e0e0;
       font-family: sans-serif;
@@ -61,7 +77,7 @@
     }
 
     h2 {
-        font-size: 20px;
+        font-size: 24px;
         font-weight: normal;
         color: #ffffff;
         margin-top: 40px;
@@ -81,6 +97,11 @@
     a:hover {
         color: #ffffff;
         border-bottom: 1px solid #ffffff;
+    }
+
+    /* Remove underline from header/footer links */
+    header a, .footer-nav a {
+        border-bottom: none;
     }
     
     /* --- Footer --- */
@@ -115,16 +136,17 @@
 <body>
 
   <header>
+    <nav class="nav-left">
+      <a href="index.html">Bergvia</a> 
+      <a href="about.html">About</a> 
+      <a href="investments.html">Investments</a>
+    </nav>
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
       </a>
     </div>
-    <nav>
-      <!-- No "active" class here as Privacy Policy is not in the main nav -->
-      <a href="index.html">Bergvia</a> 
-      <a href="about.html">About</a> 
-      <a href="investments.html">Investments</a>
+    <nav class="nav-right">
       <a href="contacts.html">Contacts</a>
     </nav>
   </header>
