--- a/index.html
+++ b/index.html
@@ -25,29 +25,34 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
+      padding: 15px 25px;
       box-sizing: border-box;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .nav-left, .nav-right {
-      display: flex;
-      align-items: center;
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(4px);
     }
 
     .logo img {
-      height: 80px;
+      height: 60px;
       width: auto;
+      transition: height 0.3s ease;
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      flex-wrap: nowrap;
     }
 
     nav a {
-      margin: 0 15px;
       text-decoration: none;
       color: #e0e0e0;
       font-family: sans-serif;
-      font-size: 16px;
+      font-size: 15px;
       letter-spacing: 1px;
       transition: color 0.3s;
+      white-space: nowrap;
     }
 
     nav a:hover, nav a.active {
@@ -55,7 +60,7 @@
       text-decoration: underline;
     }
 
-    /* --- Full Screen Hero Section --- */
+    /* --- Hero Section --- */
     .full-screen-hero {
       height: 100vh;
       background-image: url('images/Bergvia home page.jpg');
@@ -127,7 +132,7 @@
       color: #777;
     }
 
-    /* --- Cookie Banner Styles --- */
+    /* --- Cookie Banner --- */
     #cookie-banner {
       position: fixed;
       bottom: 0;
@@ -150,10 +155,12 @@
       margin: 0 20px 0 0;
       color: #b0b0b0;
     }
+
     #cookie-banner a {
       color: #e0e0e0;
       text-decoration: underline;
     }
+
     .cookie-buttons button {
       background-color: #333;
       color: #ffffff;
@@ -164,70 +171,63 @@
       border-radius: 5px;
       transition: background-color 0.3s;
     }
+
     .cookie-buttons button:hover {
       background-color: #555;
     }
+
     .cookie-buttons #accept-cookies {
       background-color: #b0b0b0;
       color: #0d0d0d;
       font-weight: bold;
     }
 
-    /* --- Responsive Design --- */
-    @media (max-width: 1024px) {
-      .full-screen-hero {
-        padding: 20vh 8vw 40px 8vw;
+    /* --- Responsive --- */
+    @media (max-width: 900px) {
+      .logo img {
+        height: 50px;
       }
-      .full-screen-hero h1 {
-        font-size: 48px;
-      }
-      .hero-footer {
-        left: 8vw;
-        right: 8vw;
+      nav a {
+        font-size: 14px;
       }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 700px) {
       header {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-        background-color: rgba(0, 0, 0, 0.7);
-        position: fixed;
-      }
-      .logo img {
-        height: 60px;
-        margin: 10px 0;
-      }
-      .nav-left, .nav-right {
         flex-wrap: wrap;
         justify-content: center;
+        padding: 10px 15px;
+      }
+      .logo {
+        order: 1;
+        flex: 1 1 100%;
+        text-align: center;
+        margin-bottom: 5px;
+      }
+      .logo img {
+        height: 45px;
+      }
+      nav {
+        flex: 1 1 100%;
+        justify-content: center;
+        gap: 10px;
       }
       nav a {
-        margin: 10px;
-        font-size: 15px;
-      }
-      .full-screen-hero {
-        padding: 30vh 6vw 40px 6vw;
-        text-align: left;
-      }
-      .full-screen-hero h1 {
-        font-size: 36px;
-        line-height: 1.3;
-      }
-      .hero-footer {
-        position: static;
-        margin-top: 40px;
-      }
-      .hero-footer p {
-        font-size: 16px;
-        max-width: 100%;
+        font-size: 13px;
+        margin: 0 5px;
       }
     }
 
     @media (max-width: 480px) {
+      .logo img {
+        height: 40px;
+      }
+      nav a {
+        font-size: 12px;
+        letter-spacing: 0.5px;
+      }
       .full-screen-hero {
-        padding: 30vh 5vw 40px 5vw;
+        padding: 28vh 5vw 40px 5vw;
       }
       .full-screen-hero h1 {
         font-size: 30px;
@@ -242,17 +242,19 @@
 <body>
 
   <header>
-    <nav class="nav-left">
-      <a href="index.html" class="active">Bergvia</a> 
+    <nav>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
     </nav>
+
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
       </a>
     </div>
-    <nav class="nav-right">
+
+    <nav>
       <a href="contacts.html">Contacts</a>
     </nav>
   </header>
@@ -260,11 +262,11 @@
   <main>
     <section class="full-screen-hero">
       <h1>Grounded in the Alps. Investing for Generations.</h1>
-
       <div class="hero-footer">
         <hr>
         <p>
-          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. At Bergvia Family Office we invest across real estate, public markets and private equity to create lasting value for our future generations, the communities where we live and the natural environment that sustains us. <br><br>Our approach combines an entrepreneurial mindset with the discipline of long-term capital investment.
+          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. At Bergvia Family Office we invest across real estate, public markets and private equity to create lasting value for our future generations, the communities where we live and the natural environment that sustains us.<br><br>
+          Our approach combines an entrepreneurial mindset with the discipline of long-term capital investment.
         </p>
       </div>
     </section>
@@ -294,12 +296,62 @@
 
   <script>
     const GA_MEASUREMENT_ID = 'YOUR_GA_MEASUREMENT_ID'; 
-    function setCookie(name, value, days) { let expires = ""; if (days) { const date = new Date(); date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000)); expires = "; expires=" + date.toUTCString(); } document.cookie = name + "=" + (value || "") + expires + "; path=/; SameSite=Lax"; }
-    function getCookie(name) { const nameEQ = name + "="; const ca = document.cookie.split(';'); for (let i = 0; i < ca.length; i++) { let c = ca[i]; while (c.charAt(0) == ' ') c = c.substring(1, c.length); if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length); } return null; }
-    function loadGoogleAnalytics() { if (GA_MEASUREMENT_ID === 'YOUR_GA_MEASUREMENT_ID') { console.warn('Google Analytics not loaded.'); return; } const script = document.createElement('script'); script.src = `https://www.googletagmanager.com/gtag/js?id=${GA_MEASUREMENT_ID}`; script.async = true; document.head.appendChild(script); window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', GA_MEASUREMENT_ID, { 'anonymize_ip': true }); }
-    document.addEventListener('DOMContentLoaded', () => { const cookieBanner = document.getElementById('cookie-banner'); const acceptButton = document.getElementById('accept-cookies'); const declineButton = document.getElementById('decline-cookies'); const consentCookie = getCookie('cookie_consent'); if (consentCookie === 'true') { loadGoogleAnalytics(); } else if (!consentCookie) { cookieBanner.style.display = 'flex'; }
-    acceptButton.addEventListener('click', () => { setCookie('cookie_consent', 'true', 365); cookieBanner.style.display = 'none'; loadGoogleAnalytics(); });
-    declineButton.addEventListener('click', () => { setCookie('cookie_consent', 'false', 365); cookieBanner.style.display = 'none'; }); });
+    function setCookie(name, value, days) {
+      let expires = "";
+      if (days) {
+        const date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        expires = "; expires=" + date.toUTCString();
+      }
+      document.cookie = name + "=" + (value || "") + expires + "; path=/; SameSite=Lax";
+    }
+
+    function getCookie(name) {
+      const nameEQ = name + "=";
+      const ca = document.cookie.split(';');
+      for (let i = 0; i < ca.length; i++) {
+        let c = ca[i];
+        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+      }
+      return null;
+    }
+
+    function loadGoogleAnalytics() {
+      if (GA_MEASUREMENT_ID === 'YOUR_GA_MEASUREMENT_ID') {
+        console.warn('Google Analytics not loaded.');
+        return;
+      }
+      const script = document.createElement('script');
+      script.src = `https://www.googletagmanager.com/gtag/js?id=${GA_MEASUREMENT_ID}`;
+      script.async = true;
+      document.head.appendChild(script);
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', GA_MEASUREMENT_ID, { 'anonymize_ip': true });
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const cookieBanner = document.getElementById('cookie-banner');
+      const acceptButton = document.getElementById('accept-cookies');
+      const declineButton = document.getElementById('decline-cookies');
+      const consentCookie = getCookie('cookie_consent');
+      if (consentCookie === 'true') {
+        loadGoogleAnalytics();
+      } else if (!consentCookie) {
+        cookieBanner.style.display = 'flex';
+      }
+      acceptButton.addEventListener('click', () => {
+        setCookie('cookie_consent', 'true', 365);
+        cookieBanner.style.display = 'none';
+        loadGoogleAnalytics();
+      });
+      declineButton.addEventListener('click', () => {
+        setCookie('cookie_consent', 'false', 365);
+        cookieBanner.style.display = 'none';
+      });
+    });
   </script>
 
 </body>
