--- a/index.html
+++ b/index.html
@@ -25,61 +25,98 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px 25px;
+      padding: 20px 40px;
       box-sizing: border-box;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(4px);
-    }
-
-    .logo img {
-      height: 60px;
-      width: auto;
-      transition: height 0.3s ease;
+      flex-wrap: wrap;
+      background: transparent;
     }
 
     nav {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
-      gap: 15px;
-      flex-wrap: nowrap;
     }
 
     nav a {
+      margin: 0 15px;
       text-decoration: none;
       color: #e0e0e0;
       font-family: sans-serif;
-      font-size: 15px;
+      font-size: 16px;
       letter-spacing: 1px;
       transition: color 0.3s;
-      white-space: nowrap;
     }
 
-    nav a:hover, nav a.active {
+    nav a:hover,
+    nav a.active {
       color: #ffffff;
       text-decoration: underline;
     }
 
-    /* --- Hero Section --- */
+    .logo img {
+      height: 70px;
+      width: auto;
+    }
+
+    /* --- Mobile Adjustments --- */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 20px;
+      }
+
+      nav a {
+        margin: 0 8px;
+        font-size: 14px;
+      }
+
+      .logo img {
+        height: 50px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 15px;
+      }
+
+      nav a {
+        margin: 0 6px;
+        font-size: 13px;
+      }
+
+      .logo img {
+        height: 40px;
+      }
+    }
+
+    /* --- Full Screen Hero Section --- */
     .full-screen-hero {
       height: 100vh;
       background-image: url('images/Bergvia home page.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
       box-sizing: border-box;
-      padding: 25vh 10vw 60px 10vw;
+      padding: 25vh 60px 60px 300px;
       position: relative;
       color: #ffffff;
       text-shadow: 0 2px 5px rgba(0,0,0,0.5);
     }
 
     .full-screen-hero h1 {
-      font-size: 64px;
+      font-size: 78px;
       font-weight: normal;
       max-width: 900px;
       margin: 0;
@@ -89,8 +126,8 @@
     .hero-footer {
       position: absolute;
       bottom: 50px;
-      left: 10vw;
-      right: 10vw;
+      left: 300px;
+      right: 300px;
     }
 
     .hero-footer hr {
@@ -103,8 +140,49 @@
     .hero-footer p {
       max-width: 700px;
       font-size: 19px;
-      line-height: 1.5;
+      line-height: 1.4;
       margin: 0;
+    }
+
+    @media (max-width: 768px) {
+      .full-screen-hero {
+        padding: 20vh 30px 40px 30px;
+      }
+
+      .full-screen-hero h1 {
+        font-size: 44px;
+      }
+
+      .hero-footer {
+        left: 30px;
+        right: 30px;
+        bottom: 30px;
+      }
+
+      .hero-footer p {
+        font-size: 16px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .full-screen-hero {
+        padding: 18vh 20px 30px 20px;
+      }
+
+      .full-screen-hero h1 {
+        font-size: 34px;
+        line-height: 1.3;
+      }
+
+      .hero-footer {
+        left: 20px;
+        right: 20px;
+        bottom: 20px;
+      }
+
+      .hero-footer p {
+        font-size: 15px;
+      }
     }
 
     /* --- Footer --- */
@@ -123,6 +201,7 @@
       margin: 0 15px;
       transition: color 0.3s;
     }
+
     .footer-nav a:hover {
       color: #ffffff;
     }
@@ -132,7 +211,7 @@
       color: #777;
     }
 
-    /* --- Cookie Banner --- */
+    /* --- Cookie Banner Styles --- */
     #cookie-banner {
       position: fixed;
       bottom: 0;
@@ -181,61 +260,6 @@
       color: #0d0d0d;
       font-weight: bold;
     }
-
-    /* --- Responsive --- */
-    @media (max-width: 900px) {
-      .logo img {
-        height: 50px;
-      }
-      nav a {
-        font-size: 14px;
-      }
-    }
-
-    @media (max-width: 700px) {
-      header {
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 10px 15px;
-      }
-      .logo {
-        order: 1;
-        flex: 1 1 100%;
-        text-align: center;
-        margin-bottom: 5px;
-      }
-      .logo img {
-        height: 45px;
-      }
-      nav {
-        flex: 1 1 100%;
-        justify-content: center;
-        gap: 10px;
-      }
-      nav a {
-        font-size: 13px;
-        margin: 0 5px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .logo img {
-        height: 40px;
-      }
-      nav a {
-        font-size: 12px;
-        letter-spacing: 0.5px;
-      }
-      .full-screen-hero {
-        padding: 28vh 5vw 40px 5vw;
-      }
-      .full-screen-hero h1 {
-        font-size: 30px;
-      }
-      .hero-footer p {
-        font-size: 15px;
-      }
-    }
   </style>
 </head>
 
@@ -243,17 +267,15 @@
 
   <header>
     <nav>
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html" class="active">Home</a> 
       <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
     </nav>
-
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
       </a>
     </div>
-
     <nav>
       <a href="contacts.html">Contacts</a>
     </nav>
@@ -265,8 +287,7 @@
       <div class="hero-footer">
         <hr>
         <p>
-          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. At Bergvia Family Office we invest across real estate, public markets and private equity to create lasting value for our future generations, the communities where we live and the natural environment that sustains us.<br><br>
-          Our approach combines an entrepreneurial mindset with the discipline of long-term capital investment.
+          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. At Bergvia Family Office we invest across real estate, public markets and private equity to create lasting value for our future generations, the communities where we live and the natural environment that sustains us. <br>Our approach combines an entrepreneurial mindset with the discipline of long-term capital investment.
         </p>
       </div>
     </section>
@@ -285,7 +306,7 @@
     </p>
   </footer>
 
-  <!-- Cookie Banner -->
+  <!-- Cookie Banner HTML -->
   <div id="cookie-banner">
     <p>This website uses Google Analytics to collect anonymous visitor statistics. See our <a href="privacy.html">Privacy Policy</a> for more details.</p>
     <div class="cookie-buttons">
@@ -295,7 +316,8 @@
   </div>
 
   <script>
-    const GA_MEASUREMENT_ID = 'YOUR_GA_MEASUREMENT_ID'; 
+    // Cookie Banner Javascript
+    const GA_MEASUREMENT_ID = 'YOUR_GA_MEASUREMENT_ID'; // <-- IMPORTANT: REPLACE THIS!
     function setCookie(name, value, days) {
       let expires = "";
       if (days) {
@@ -319,7 +341,7 @@
 
     function loadGoogleAnalytics() {
       if (GA_MEASUREMENT_ID === 'YOUR_GA_MEASUREMENT_ID') {
-        console.warn('Google Analytics not loaded.');
+        console.warn('Google Analytics is not loaded. Please replace YOUR_GA_MEASUREMENT_ID.');
         return;
       }
       const script = document.createElement('script');
@@ -337,16 +359,19 @@
       const acceptButton = document.getElementById('accept-cookies');
       const declineButton = document.getElementById('decline-cookies');
       const consentCookie = getCookie('cookie_consent');
+
       if (consentCookie === 'true') {
         loadGoogleAnalytics();
       } else if (!consentCookie) {
         cookieBanner.style.display = 'flex';
       }
+
       acceptButton.addEventListener('click', () => {
         setCookie('cookie_consent', 'true', 365);
         cookieBanner.style.display = 'none';
         loadGoogleAnalytics();
       });
+
       declineButton.addEventListener('click', () => {
         setCookie('cookie_consent', 'false', 365);
         cookieBanner.style.display = 'none';
