--- a/investments.html
+++ b/investments.html
@@ -15,48 +15,27 @@
       font-size: 18px;
     }
 
-    /* --- Fixed Header --- */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
+    /* --- Header & Navigation (same as index.html) --- */
+  header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  flex-wrap: wrap;
+  background: transparent;
+}
+    nav {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
       flex-wrap: wrap;
-      padding: 20px 60px;
-      box-sizing: border-box;
-      background-color: rgba(255, 255, 255, 0.97);
-      border-bottom: 1px solid #eee;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .nav-left, .nav-right {
-      display: flex;
-      align-items: center;
-      flex: 1;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .nav-right {
-      justify-content: flex-end;
-    }
-
-    .logo {
-      flex: 1;
-      display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    .logo img {
-      height: 70px;
-      width: auto;
-      max-width: 100%;
-      transition: all 0.3s ease;
     }
 
     nav a {
@@ -69,14 +48,58 @@
       transition: color 0.3s;
     }
 
-    nav a:hover, nav a.active {
+    nav a:hover,
+    nav a.active {
       color: #000;
-      font-weight: bold;
+      text-decoration: underline;
+    }
+
+    .logo img {
+      height: 70px;
+      width: auto;
+      max-width: 100%;
+      transition: all 0.3s ease;
+    }
+
+    /* --- Mobile Adjustments for header --- */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 20px;
+      }
+
+      nav a {
+        margin: 0 8px;
+        font-size: 14px;
+      }
+
+      .logo img {
+        height: 50px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 15px;
+      }
+
+      nav a {
+        margin: 0 6px;
+        font-size: 13px;
+      }
+
+      .logo img {
+        height: 40px;
+      }
     }
 
     /* --- Hero Section --- */
     .page-hero {
-      height: 60vh;
+      height: 70vh;
       min-height: 500px;
       background-image: url('images/Other pages.jpg');
       background-size: cover;
@@ -85,61 +108,118 @@
       display: flex;
       align-items: flex-start;
       justify-content: flex-start;
-      box-sizing: border-box;
-      padding-top: 160px; /* Below header */
       position: relative;
-      color: #fff;
+      box-sizing: border-box;
     }
 
     .hero-content {
-      max-width: 900px;
-      margin-left: 200px; /* Shift 200px right */
-      margin-top: 100px; /* Shift 100px down */
-      text-shadow: 0 2px 5px rgba(0,0,0,0.5);
-      background: transparent; /* Fully transparent box */
-      padding: 20px 25px;
-      border-radius: 8px;
+      max-width: 1300px;
+      padding: 300px 60px 0 260px;
+      box-sizing: border-box;
+      color: #ffffff;
+      text-shadow: 0 2px 5px rgba(0,0,0,0.4);
+      background-color: transparent;
     }
 
     .hero-content h1 {
-      font-size: 42px;
+      font-size: 40px;
       font-weight: normal;
-      margin: 0;
-      line-height: 1.2;
+      margin: 0 0 20px 0;
+      line-height: 1.3;
     }
 
-    /* --- Main Content Area --- */
+    /* --- Mobile adjustments for hero --- */
+    @media (max-width: 1024px) {
+      .hero-content {
+        padding: 100px 40px 0 80px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .page-hero {
+        height: 60vh;
+        background-position: center center;
+        padding-top: 120px;
+      }
+
+      .hero-content {
+        padding: 100px 30px;
+      }
+
+      .hero-content h1 {
+        font-size: 34px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .page-hero {
+        height: 50vh;
+        background-position: center;
+        padding-top: 100px;
+      }
+
+      .hero-content {
+        padding: 40px 20px;
+      }
+
+      .hero-content h1 {
+        font-size: 26px;
+      }
+    }
+
+    /* --- Page Content --- */
     .page-content {
       max-width: 900px;
-      margin: 80px auto;
+      margin: 100px auto;
       padding: 0 60px;
-      box-sizing: border-box;
-      text-align: justify; /* Fully justified text */
+      text-align: justify;
     }
 
-    h2 {
-      font-size: 28px;
+    .page-content h2 {
+      font-size: 26px;
       font-weight: normal;
       color: #000;
       border-bottom: 1px solid #ddd;
-      padding-bottom: 15px;
+      padding-bottom: 10px;
       margin-top: 60px;
-      text-align: left;
     }
 
-    p { 
+    .page-content p {
       margin-bottom: 20px;
     }
 
-    /* --- Footer --- */
+    .page-content ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+
+    .page-content li {
+      margin-bottom: 15px;
+    }
+
+    @media (max-width: 768px) {
+      .page-content {
+        padding: 0 30px;
+        margin: 80px auto;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .page-content {
+        padding: 0 20px;
+        margin: 60px auto;
+      }
+    }
+
+    /* --- Footer (white, same as index.html) --- */
     footer {
       text-align: center;
       font-size: 14px;
       padding: 40px 20px;
-      background-color: #f8f8f8;
+      background-color: #ffffff;
       border-top: 1px solid #ddd;
-      margin-top: 100px;
       font-family: sans-serif;
+      color: #555;
     }
 
     .footer-nav a {
@@ -149,70 +229,13 @@
       transition: color 0.3s;
     }
 
-    .footer-nav a:hover { color: #000; }
-    .copyright { margin-top: 20px; color: #999; }
-
-    /* --- Responsive Layouts --- */
-    @media (max-width: 1100px) {
-      .hero-content {
-        margin-left: 120px;
-        margin-top: 80px;
-      }
-
-      .hero-content h1 {
-        font-size: 34px;
-      }
+    .footer-nav a:hover {
+      color: #000;
     }
 
-    @media (max-width: 900px) {
-      header {
-        padding: 15px 25px;
-      }
-
-      .logo img {
-        height: 60px;
-      }
-
-      .page-hero {
-        padding-top: 120px;
-        height: 50vh;
-      }
-
-      .hero-content {
-        margin-left: 50px;
-        margin-top: 60px;
-        max-width: 90%;
-      }
-
-      .hero-content h1 {
-        font-size: 26px;
-        line-height: 1.3;
-      }
-
-      .page-content {
-        padding: 0 30px;
-      }
-
-      nav a {
-        margin: 5px 10px;
-        font-size: 15px;
-      }
-    }
-
-    @media (max-width: 600px) {
-      .logo img {
-        height: 50px;
-      }
-
-      .hero-content {
-        margin-left: 20px;
-        margin-top: 40px;
-        padding: 10px 15px;
-      }
-
-      .hero-content h1 {
-        font-size: 22px;
-      }
+    .copyright {
+      margin-top: 20px;
+      color: #888;
     }
   </style>
 </head>
@@ -220,65 +243,46 @@
 <body>
 
   <header>
-    <nav class="nav-left">
-      <a href="index.html">Bergvia</a>
-      <a href="about.html">About</a>
+    <nav>
+      <a href="index.html">Home</a> 
+      <a href="about.html">About</a> 
       <a href="investments.html" class="active">Investments</a>
     </nav>
-
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
       </a>
     </div>
-
-    <nav class="nav-right">
+    <nav>
       <a href="contacts.html">Contacts</a>
     </nav>
   </header>
 
   <main>
-    <!-- Hero Section -->
     <section class="page-hero">
       <div class="hero-content">
         <h1>
-          Bergvia invests in Public markets, Real Estate and Private markets via partnerships with selected asset managers.
-          Bergvia also acquires and builds operating businesses in growth industries.
+          Bergvia invests in Public markets, Real Estate and Private markets via partnerships with selected asset managers. Bergvia also acquires and builds operating businesses in growth industries.
         </h1>
       </div>
     </section>
 
-    <!-- Content -->
     <section class="page-content">
       <h2>Our Approach: A Blend of Strategies</h2>
       <p>
-        Bergvia has a diversified and flexible approach to navigating the complexities of the global markets. 
-        We mix investments in Real Estate, in Public and Private markets with Direct Ownerships of operating businesses.
+        Bergvia has a diversified and flexible approach to navigating the complexities of the global markets. We mix investments in Real Estate, in Public and Private markets with Direct Ownerships of operating businesses.
       </p>
 
-      <p><strong>Public Markets:</strong> We invest in global listed equities and fixed income with patient capital focused on sustainable value creation. 
-      Our equity strategy is to be long-term owners of high-quality, well-managed businesses with durable competitive advantages and strong fundamentals. 
-      We prioritize deep research and a thorough understanding of the companies we invest in, rather than reacting to short-term market volatility. 
-      In fixed income, our approach is centered on capital preservation and the generation of stable, predictable income streams, carefully managing credit and duration risk.</p>
+      <p><strong>Public Markets:</strong> We invest in global listed equities and fixed income with patient capital focused on sustainable value creation. Our equity strategy is to be long-term owners of high-quality, well-managed businesses with durable competitive advantages and strong fundamentals. We prioritize deep research and a thorough understanding of the companies we invest in, rather than reacting to short-term market volatility. In fixed income, our approach is centered on capital preservation and the generation of stable, predictable income streams, carefully managing credit and duration risk.</p>
 
-      <p><strong>Real Estate:</strong> We invest in Real Estate for its tangible nature, stable income generation and long-term capital appreciation. 
-      Our strategy focuses mainly in residential and commercial properties, avoiding overheated locations, mainly in Switzerland. 
-      Bergvia invests both directly and through trusted partnerships with specialized local developers and managers to access and execute best-in-class real estate opportunities.</p>
+      <p><strong>Real Estate:</strong> We invest in Real Estate for its tangible nature, stable income generation and long-term capital appreciation. Our strategy focuses mainly in residential and commercial properties, avoiding overheated locations, mainly in Switzerland. Bergvia invests both directly and through trusted partnerships with specialized local developers and managers to access and execute best-in-class real estate opportunities.</p>
 
-      <p><strong>Private Markets:</strong> We partner with a select and small group of asset managers in Switzerland and Europe. 
-      These relationships provide us with deep sector knowledge and access to a broad universe of opportunities in Private Equity and Venture Capital, 
-      Infrastructure and Real Assets, Technology and Digital Innovation.</p>
+      <p><strong>Private Markets:</strong> We partner with a select and small group of asset managers in Switzerland and Europe. These relationships provide us with deep sector knowledge and access to a broad universe of opportunities in Private Equity and Venture Capital, Infrastructure and Real Assets, Technology and Digital Innovation.</p>
 
-      <p><strong>Direct Ownership:</strong> Reflecting our entrepreneurial heritage, Bergvia also directly acquires, develops, and nurtures operating businesses. 
-      In these ventures, we take an active, hands-on role, providing strategic guidance and patient capital to help strong management teams achieve their full potential. 
-      Our focus for direct investments is on growth sectors aligned with future trends, including: Circular Economy, Beauty & Cosmetics, Health Tech and Technology.</p>
+      <p><strong>Direct Ownership:</strong> Reflecting our entrepreneurial heritage, Bergvia also directly acquires, develops, and nurtures operating businesses. In these ventures, we take an active, hands-on role, providing strategic guidance and patient capital to help strong management teams achieve their full potential. Our focus for direct investments is on growth sectors aligned with future trends, including: Circular Economy, Beauty & Cosmetics, Health Tech and Technology.</p>
 
       <p>
-        Our investment activity is defined by the powerful combination of strategic patience and entrepreneurial agility. 
-        As a family, we are not bound by short-term performance metrics, allowing us to invest with a true multi-generational horizon. 
-        We have the discipline to support our partners and companies through economic cycles. 
-        At the same time, our private and agile structure enables us to make swift, decisive commitments when we identify unique opportunities that align with our long-term vision. 
-        This is how we build resilient legacies—steadily, and one decision at a time.
+        Our investment activity is defined by the powerful combination of strategic patience and entrepreneurial agility. As a family, we are not bound by short-term performance metrics, allowing us to invest with a true multi-generational horizon. We have the discipline to support our partners and companies through economic cycles. At the same time, our private and agile structure enables us to make swift, decisive commitments when we identify unique opportunities that align with our long-term vision. This is how we build resilient legacies—steadily, and one decision at a time.
       </p>
     </section>
   </main>
