--- a/about.html
+++ b/about.html
@@ -221,7 +221,8 @@
       <a href="privacy.html">Privacy Policy</a>
     </div>
     <p class="copyright">
-      © 2025, Bergvia Family Office. All Rights Reserved.
+      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company 
+managing the assets of a single family.
     </p>
   </footer>
 
