--- a/index.html
+++ b/index.html
@@ -287,10 +287,8 @@
       <div class="hero-footer">
         <hr>
         <p>
-          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family.
-          At Bergvia Family Office we invest across real estate, public markets and private equity to create lasting value for our
-          future generations, the communities where we live and the natural environment that sustains us. <br>
-          Our approach combines an entrepreneurial mindset with the discipline of long-term capital investment.
+          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset, directly acquiring and building operating businesses with strong growth potential.
+          <br>Through this blended strategy, we aim to create lasting value for our future generations, the communities where we live, and the natural environment that sustains us.
         </p>
       </div>
     </section>
