--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
     }
 
     .hero-footer p {
-      max-width: 700px;
+      max-width: 1000px;
       font-size: 24px;
       line-height: 1.4;
       margin: 0;
+      text-align: justify;
     }
 
     @media (max-width: 768px) {
