--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-size: 18px;
     }
 
-    /* --- Header & Navigation --- */
+    /* --- HEADER & NAVIGATION (Copied from your working contacts.html) --- */
     header {
       position: absolute;
       top: 0;
@@ -27,34 +27,30 @@
       align-items: center;
       padding: 20px 40px;
       box-sizing: border-box;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       flex-wrap: wrap;
       background: transparent;
     }
-
     nav {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
     }
-
     nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: #333;
+      color: #ffffff; /* White text for floating header */
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
       transition: color 0.3s;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
-
     nav a:hover,
     nav a.active {
-      color: #000;
+      color: #fff;
       text-decoration: underline;
     }
-
     .logo img {
       height: 70px;
       width: auto;
@@ -62,37 +58,24 @@
       transition: all 0.3s ease;
     }
 
-    /* --- Mobile Adjustments --- */
+    /* --- Mobile Adjustments for header (Copied from your working contacts.html) --- */
     @media (max-width: 768px) {
-      header {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 15px 20px;
-      }
-
-      nav a {
-        margin: 0 8px;
-        font-size: 14px;
-      }
-
-      .logo img {
-        height: 50px;
-      }
+      header { flex-direction: row; justify-content: space-between; padding: 15px 20px; }
+      nav a { margin: 0 8px; font-size: 14px; }
+      .logo img { height: 50px; }
     }
-
     @media (max-width: 480px) {
+      /* This rule from your contacts.html has a different structure that you prefer */
       header {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 10px 15px;
       }
-
       nav a {
         margin: 0 6px;
         font-size: 13px;
       }
-
       .logo img {
         height: 40px;
       }
@@ -105,162 +88,59 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-
+      box-sizing: border-box;
+    }
+    .hero-text-wrapper {
+      height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
+      justify-content: space-between;
       box-sizing: border-box;
-      padding: 25vh 60px 60px 300px;
-      position: relative;
+      padding: 25vh 60px 50px 300px;
       color: #ffffff;
       text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     }
-
     .full-screen-hero h1 {
-      font-size: 72px;
       font-weight: normal;
-      max-width: 900px;
+      max-width: 1200px;
       margin: 0;
       line-height: 1.2;
+      font-size: clamp(34px, 5.5vw, 78px);
     }
-
-    .hero-footer {
-      position: absolute;
-      bottom: 50px;
-      left: 300px;
-      right: 300px;
-    }
-
-    .hero-footer hr {
+    .hero-footer-content hr {
       border: none;
       height: 1px;
       background-color: rgba(255, 255, 255, 0.5);
       margin-bottom: 20px;
     }
-
-    .hero-footer p {
+    .hero-footer-content p {
       max-width: 1000px;
-      font-size: 24px;
       line-height: 1.4;
       margin: 0;
-      text-align: justify;
+	  text-align: justify;
+      font-size: clamp(15px, 1.5vw, 24px);
     }
 
+    /* --- Mobile Adjustments for Hero --- */
     @media (max-width: 768px) {
-      .full-screen-hero {
-        padding: 20vh 30px 40px 30px;
-      }
-
-      .full-screen-hero h1 {
-        font-size: 44px;
-      }
-
-      .hero-footer {
-        left: 30px;
-        right: 30px;
-        bottom: 30px;
-      }
-
-      .hero-footer p {
-        font-size: 16px;
-      }
+      .hero-text-wrapper { padding: 20vh 30px 40px 30px; }
     }
-
     @media (max-width: 480px) {
-      .full-screen-hero {
-        padding: 18vh 20px 30px 20px;
-      }
-
-      .full-screen-hero h1 {
-        font-size: 34px;
-        line-height: 1.3;
-      }
-
-      .hero-footer {
-        left: 20px;
-        right: 20px;
-        bottom: 20px;
-      }
-
-      .hero-footer p {
-        font-size: 15px;
-      }
+      .hero-text-wrapper { padding: 18vh 20px 30px 20px; }
     }
 
     /* --- Footer --- */
-    footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 40px 20px;
-      background-color: #ffffff;
-      border-top: 1px solid #ddd;
-      font-family: sans-serif;
-      color: #555;
-    }
-
-    .footer-nav a {
-      color: #555;
-      text-decoration: none;
-      margin: 0 15px;
-      transition: color 0.3s;
-    }
-
-    .footer-nav a:hover {
-      color: #000;
-    }
-
-    .copyright {
-      margin-top: 20px;
-      color: #888;
-    }
+    footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
+    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
+    .footer-nav a:hover { color: #000; }
+    .copyright { margin-top: 20px; color: #999; }
 
     /* --- Cookie Banner Styles --- */
-    #cookie-banner {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #ffffff;
-      border-top: 1px solid #ddd;
-      padding: 20px;
-      box-sizing: border-box;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      z-index: 1000;
-      font-family: sans-serif;
-      font-size: 14px;
-      color: #333;
-      box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05);
-    }
-
-    #cookie-banner a {
-      color: #333;
-      text-decoration: underline;
-    }
-
-    .cookie-buttons button {
-      background-color: #eaeaea;
-      color: #333;
-      border: 1px solid #ccc;
-      padding: 10px 20px;
-      margin-left: 10px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-    }
-
-    .cookie-buttons button:hover {
-      background-color: #ddd;
-    }
-
-    .cookie-buttons #accept-cookies {
-      background-color: #333;
-      color: #fff;
-      font-weight: bold;
-    }
+    #cookie-banner { position: fixed; bottom: 0; left: 0; width: 100%; background-color: #ffffff; border-top: 1px solid #ddd; padding: 20px; box-sizing: border-box; display: none; justify-content: center; align-items: center; text-align: center; z-index: 1000; font-family: sans-serif; font-size: 14px; color: #333; box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05); }
+    #cookie-banner a { color: #333; text-decoration: underline; }
+    .cookie-buttons button { background-color: #eaeaea; color: #333; border: 1px solid #ccc; padding: 10px 20px; margin-left: 10px; cursor: pointer; border-radius: 5px; transition: background-color 0.3s; }
+    .cookie-buttons button:hover { background-color: #ddd; }
+    .cookie-buttons #accept-cookies { background-color: #333; color: #fff; font-weight: bold; }
   </style>
 </head>
 
@@ -284,13 +164,18 @@
 
   <main>
     <section class="full-screen-hero">
-      <h1>Grounded in the Alps. Investing for Generations.</h1>
-      <div class="hero-footer">
-        <hr>
-        <p>
-          Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset, directly acquiring and building operating businesses with strong growth potential.
-          <br>Through this blended strategy, we aim to create lasting value for our future generations, the communities where we live, and the natural environment that sustains us.
-        </p>
+      <div class="hero-text-wrapper">
+        
+        <h1>Grounded in the Alps. Investing for Generations.</h1>
+
+        <div class="hero-footer-content">
+          <hr>
+          <p>
+            Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset, directly acquiring and building operating businesses with strong growth potential.
+            <br>Through this blended strategy, we aim to create lasting value for our future generations, the communities where we live, and the natural environment that sustains us.
+          </p>
+        </div>
+
       </div>
     </section>
   </main>
@@ -321,66 +206,12 @@ managing the assets of a single family.
   <script>
     // --- Cookie Banner Logic ---
     const GA_MEASUREMENT_ID = 'YOUR_GA_MEASUREMENT_ID'; // Replace with your actual ID
-
-    function setCookie(name, value, days) {
-      let expires = "";
-      if (days) {
-        const date = new Date();
-        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-        expires = "; expires=" + date.toUTCString();
-      }
-      document.cookie = name + "=" + (value || "") + expires + "; path=/; SameSite=Lax";
-    }
-
-    function getCookie(name) {
-      const nameEQ = name + "=";
-      const ca = document.cookie.split(';');
-      for (let i = 0; i < ca.length; i++) {
-        let c = ca[i];
-        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-      }
-      return null;
-    }
-
-    function loadGoogleAnalytics() {
-      if (GA_MEASUREMENT_ID === 'YOUR_GA_MEASUREMENT_ID') {
-        console.warn('Google Analytics is not loaded. Replace YOUR_GA_MEASUREMENT_ID.');
-        return;
-      }
-      const script = document.createElement('script');
-      script.src = `https://www.googletagmanager.com/gtag/js?id=${GA_MEASUREMENT_ID}`;
-      script.async = true;
-      document.head.appendChild(script);
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', GA_MEASUREMENT_ID, { 'anonymize_ip': true });
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const cookieBanner = document.getElementById('cookie-banner');
-      const acceptButton = document.getElementById('accept-cookies');
-      const declineButton = document.getElementById('decline-cookies');
-      const consentCookie = getCookie('cookie_consent');
-
-      if (consentCookie === 'true') {
-        loadGoogleAnalytics();
-      } else if (!consentCookie) {
-        cookieBanner.style.display = 'flex';
-      }
-
-      acceptButton.addEventListener('click', () => {
-        setCookie('cookie_consent', 'true', 365);
-        cookieBanner.style.display = 'none';
-        loadGoogleAnalytics();
-      });
-
-      declineButton.addEventListener('click', () => {
-        setCookie('cookie_consent', 'false', 365);
-        cookieBanner.style.display = 'none';
-      });
-    });
+    function setCookie(name, value, days) { let expires = ""; if (days) { const date = new Date(); date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000)); expires = "; expires=" + date.toUTCString(); } document.cookie = name + "=" + (value || "") + expires + "; path=/; SameSite=Lax"; }
+    function getCookie(name) { const nameEQ = name + "="; const ca = document.cookie.split(';'); for (let i = 0; i < ca.length; i++) { let c = ca[i]; while (c.charAt(0) == ' ') c = c.substring(1, c.length); if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length); } return null; }
+    function loadGoogleAnalytics() { if (GA_MEASUREMENT_ID === 'YOUR_GA_MEASUREMENT_ID') { console.warn('Google Analytics is not loaded. Replace YOUR_GA_MEASUREMENT_ID.'); return; } const script = document.createElement('script'); script.src = `https://www.googletagmanager.com/gtag/js?id=${GA_MEASUREMENT_ID}`; script.async = true; document.head.appendChild(script); window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', GA_MEASUREMENT_ID, { 'anonymize_ip': true }); }
+    document.addEventListener('DOMContentLoaded', () => { const cookieBanner = document.getElementById('cookie-banner'); const acceptButton = document.getElementById('accept-cookies'); const declineButton = document.getElementById('decline-cookies'); const consentCookie = getCookie('cookie_consent'); if (consentCookie === 'true') { loadGoogleAnalytics(); } else if (!consentCookie) { cookieBanner.style.display = 'flex'; }
+    acceptButton.addEventListener('click', () => { setCookie('cookie_consent', 'true', 365); cookieBanner.style.display = 'none'; loadGoogleAnalytics(); });
+    declineButton.addEventListener('click', () => { setCookie('cookie_consent', 'false', 365); cookieBanner.style.display = 'none'; }); });
   </script>
 
 </body>
