--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
       margin: 0;
 	  text-align: justify;
       font-size: clamp(15px, 1.5vw, 24px);
+		color: #000000; /* <-- THIS IS THE NEW LINE FOR BLACK TEXT */
+      text-shadow: 0 1px 2px rgba(255, 255, 255, 0.7); /* <-- Optional: Adds a subtle white shadow for readability */
     }
 
     /* --- Mobile Adjustments for Hero --- */
