--- a/investments.html
+++ b/investments.html
@@ -174,7 +174,7 @@
     <section class="page-hero">
       <div class="hero-content">
         <h1>
-          Bergvia invests in Public markets, Real Estate and Private markets via partnerships with selected asset managers. Bergvia also acquires and builds operating businesses in growth industries.
+          Bergvia invests in Public markets, Real Estate and Private markets. Bergvia also acquires and builds operating businesses in growth industries.
         </h1>
       </div>
     </section>
